Fix text wrap, fix error when image upload progress freaks out when new images are added before it completes

--- a/frontend/src/style/app/album/_album-upload.scss
+++ b/frontend/src/style/app/album/_album-upload.scss
@@ -267,6 +267,7 @@
           strong {
             margin-bottom: 0;
             font-size: 1.2rem;
+            white-space: nowrap;
           }
 
           button {
